<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <ImageButton
        android:id="@+id/btn_toolbar_search"
        style="@style/Theme.YouRant.ActionBar.Buttons"
        android:layout_width="@dimen/toolbar_icons"
        android:layout_height="@dimen/toolbar_icons"
        android:layout_weight="0"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/search"
        app:srcCompat="@drawable/ic_search" />

    <ImageButton
        android:id="@+id/btn_toolbar_refresh"
        style="@style/Theme.YouRant.ActionBar.Buttons"
        android:layout_width="@dimen/toolbar_icons"
        android:layout_height="@dimen/toolbar_icons"
        android:layout_weight="0"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/refresh"
        app:srcCompat="@drawable/ic_refresh" />

    <ImageButton
        android:id="@+id/btn_toolbar_login"
        style="@style/Theme.YouRant.ActionBar.Buttons"
        android:layout_width="@dimen/toolbar_icons"
        android:layout_height="@dimen/toolbar_icons"
        android:layout_weight="0"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/login"
        app:srcCompat="@drawable/ic_login" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_toolbar_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/toolbar_icons_radius">

        <ImageButton
            android:id="@+id/btn_toolbar_profile"
            style="@style/Theme.YouRant.ActionBar.Buttons"
            android:layout_width="@dimen/toolbar_icons"
            android:layout_height="@dimen/toolbar_icons"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/profile"
            tools:src="@drawable/ic_login" />
    </androidx.cardview.widget.CardView>

</LinearLayout>