<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:layout_margin="8dp"
    app:layout_anchorGravity="end"
    tools:context=".ui.NewRantActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_rant_title"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spn_rant_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/rant_type"
        android:minHeight="48dp"
        android:spinnerMode="dialog" />

    <EditText
        android:id="@+id/txt_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/new_rant_rant_hint"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:maxLength="5000"
        android:minLines="8" />

    <TextView
        android:id="@+id/lbl_content_len"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:textStyle="italic"
        tools:text="0 / 5000" />

    <EditText
        android:id="@+id/txt_tags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/new_rant_tags_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/btn_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onBtnPostClick"
        android:text="@string/new_rant_post" />

    <ProgressBar
        android:id="@+id/throbber"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />
</LinearLayout>